      - Can be used as insulation for other items (similar to leather armor)
* Chameleon molt can now be used as insulation
      - This is a special new "adaptive" insulation item type
            - Slowly adjusts its insulation value from hot to cold according to the player's environment
            - This process is slow, taking about 2 minutes to fully transition from cold to hot
      - Has the same raw insulation power as rabbit hide & wool
- Rabbit Hide is now the mid-tier hot insulation item (instead of slimeballs)
      ! 'item-settings.toml' will need to be deleted for this change to take effect
- Added an advancement that unlocks the boiler & icebox recipes when the player makes a waterskin
- Ice resistance potions are now brewed with a soul sprout instead of prismarine crystals

Fixes:
- Fixed crash when breaking special minecart types (chest, hopper, insulated, etc.)

Translation Updates:
- Added Brazilian Portuguese translation (by @Vellar on Discord)

Technical Changes:
- Block Temperatures can now be given a "predicate", which makes the block emit/not emit temperature based on its state (i.e. a campfire being lit)


------------------------------------------------------------------------------------------------------------------------
2.2-b04b

Fixes:
- Fixed the heatstroke blur effect being applied when the player has immunity
- Fixed inaccurate depth detection leading to unpredictable temperatures when standing near sloped surfaces
- Fixed some visual bugs & inconsistencies when a chameleon is on the player's head
- Fixed camera sway not starting immediately when the player's temperature is above 50
- Fixed skins with an outer leg layer poking out through goat fur boots & hoglin hooves
- Fixed the chameleon eating spider eyes even when at full health and the player is already trusted

Technical Changes:
- Items with both item insulation and equipment insulation (like leather armor) will show both bars if the values are different